# mybot_stepik

./: .dockerignore  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 2023_09_25_2139-f22fa4d058b8_create_first_revision.py  2023_09_26_1103-1bb00c8a5ccc_create_first_revision.py  2023_09_26_1157-3b9d0bbeaa8c_create_first_revision.py  2023_09_26_1213-803c583647a4_create_first_revision.py  2023_09_26_1747-da0412d9ad52_create_first_revision.py  2023_09_28_1818-eae74a741dfe_create_first_revision.py  2023_09_28_1858-1552331d79ab_create_first_revision.py  2023_09_28_2117-8079a2838dca_create_first_revision.py  2023_09_29_1204-6fa05f53383a_create_first_revision.py  2023_09_29_1433-cd889a3aac01_create_first_revision.py  2023_10_01_1537-21d8da5b42f0_create_first_revision.py  2023_10_04_2318-972acb5498f3_create_first_revision.py  2023_10_05_2239-6fa7e4e5dca4_create_first_revision.py  2023_10_06_1756-542e70c25001_create_first_revision.py  2023_10_07_1337-686fe6863e25_create_first_revision.py  2023_10_07_2102-ed880b02dee1_create_first_revision.py
bot/: .gitignore  __init__.py  get_media_info.py  main.py  stepik_bot.py
bot/FSM/: fsm.py
bot/filters/: chat_type.py
bot/handlers/: __init__.py  command_handlers.py  courses_handlers.py  other_handlers.py  сhapters_handlers.py
bot/keyboards/: __init__.py  inline_keyboard.py  set_menu.py
bot/my_logging/: __init__.py  setup_logging.py
core/: CRUD.py  crud.py  temp.py
db/: CRUD.py  db.sqlite3
docs/: README.md
tests/: .gitignore
(+43 files in other folders)
