[tool.poetry]
name = "Степик - бот"
version = "0.1.0"
description = "Учебный прект"
authors = ["VitGT73 <tvit@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
pydantic-settings = "^2.0.3"
structlog = "^23.1.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
black = "^23.9.1"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
